svc/demo-externo.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-externo
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ExternalName
  externalName: mockbin.org
