svc/ingress_nginx_basico.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tdc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
# Erro: while evaluating the ingress spec: service "default/svc-externo" is type "ExternalName", expected "NodePort" or "LoadBalancer";
#      - path: /mockbin
#        backend:
#          serviceName: svc-externo
#          servicePort: 80
      - path: /fiap
        backend:
          serviceName: fiap-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tdc-ingress-loja
  namespace: sock-shop
  annotations:
    konghq.com/strip-path: "true"
    configuration.konghq.com: kongingress-loja
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
      - path: /loja
        backend:
          serviceName: front-end
          servicePort: 80
